--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <section id="about" class="about"><h1>About</h1>
-        <p>Determined designer with architecture and web Development knowledge and five years of experience effectively in professional design work environment. Seeking to enhance knowledge in human and computer interaction design by perusing master of fine art in Interactive Design.</p>
+        <p>Determined designer with architecture and web Development knowledge and five years of experience effectively in professional design work environment. Seeking to enhance knowledge in human and computer interaction design by perusing Master of Fine Art in Interactive Design.</p>
     </section>
     <section id="education" class="education"><h1>Education</h1>
         
@@ -54,7 +54,7 @@
         <h2 class="job-title">Architect, Interior designer</h2>
         <p ><h3 class="experience-title"><span>Sky Hotel Group-Iran</span> <span class="date">July 2016 - Mar 2018</span></h3></p>
         <ul>
-        <li>worked in a hotel cunstruction, providing design.</li>
+        <li>worked in a hotel construction, providing design.</li>
         <li>collaborated with design consultants and subcontractors.</li>
         <li>served as an internal part of design team to carry project from freehand schematic design presentation to construction.</li>
         <li>Used 3DS Max and VRay to render photorealistic visualizations for presentation.</li>
