--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <section id="about" class="about"><h1>About</h1>
-        <p>Determined designer with architecture and web Development knowledge and five years of experience effectively in professional design work environment. Seeking to enhance knowledge in human and computer interaction design by perusing Master of Fine Art in Interactive Design.</p>
+        <p>Determined designer with knowledge in architecture and web development and five years of experience in the professional design industry. Seeking a Master of Fine Arts in Interactive Design to expand knowledge of human and computer interaction design.</p>
     </section>
     <section id="education" class="education"><h1>Education</h1>
         
