--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Bita Samiei Moghaddam resume</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
         
     </head>
 
